# albertacovid19

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  pyproject.toml  requirements.txt
app/: get_ab_data.py  main.py  run.sh
app/R/: ab_vs_on.R  ages.R  cases_by_location.R  covid_fit.R  crisis_timeline.r  data_loader.R  hospitalization_model.R  icu.R  icu_blind_fit.R  icu_model.R  kids.R  run_all.R  severe_outcomes.R  waves.R  yoy.R  yyc_cases.R
app/R/lib/: packages.R
app/alberta/: data.py  munge.py
app/utils/: telegram.py  test_telegram.py
